# Omni_AI

./: .gitignore  App.css  App.tsx  BloatClass_000001.cs  BloatClass_000002.cs  BloatClass_000003.cs  BloatClass_000004.cs  BloatClass_000005.cs  BloatClass_000006.cs  BloatClass_000007.cs  BloatClass_000008.cs  BloatClass_000009.cs  BloatClass_000010.cs  BloatClass_000011.cs  BloatClass_000012.cs  BloatClass_000013.cs  BloatClass_000014.cs  BloatClass_000015.cs  BloatClass_000016.cs  BloatClass_000017.cs  BloatClass_000018.cs  BloatClass_000019.cs  BloatClass_000020.cs  BloatClass_000021.cs  BloatClass_000022.cs  BloatClass_000023.cs  BloatClass_000024.cs  BloatClass_000025.cs  BloatClass_000026.cs  BloatClass_000027.cs  BloatClass_000028.cs  BloatClass_000029.cs  BloatClass_000030.cs  BloatClass_000031.cs  BloatClass_000032.cs  BloatClass_000033.cs  BloatClass_000034.cs  BloatClass_000035.cs  BloatClass_000036.cs  BloatClass_000037.cs  (+70 more)
