[package]
name = "omnicore_vision"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
flume = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
windows = { version = "0.52", features = ["Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11"] }
ndarray = "0.15"
omnicore_core = { path = "../omnicore_core" }
